--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "coverage": "jest --coverage",
-    "build": "webpack",
-    "watch": "webpack --watch"
+    "coverage": "npm run lint && jest --coverage",
+    "lint": "eslint src webpack.config.js",
+    "build": "npm run lint && npm run test && webpack",
+    "watch": "webpack --watch",
+    "ci": "npm run test"
   },
+  "eslintIgnore": ["*.test.js"],
   "author": "",
   "license": "ISC",
   "dependencies": {},
@@ -16,6 +19,8 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
+    "eslint": "^4.19.1",
+    "eslint-watch": "^3.1.3",
     "jest": "^22.4.3",
     "webpack": "^3.11.0"
   }
