--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,8 @@ node_js:
     - '6'
     - '7'
     - 'stable'
+install:
+    npm i -g coveralls
 script: npm run ci
+after_success:
+    - cat ./coverage/lcov.info | coveralls
