--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "coverage": "npm run lint && jest --coverage",
+    "coverage": "jest --coverage",
     "lint": "eslint src webpack.config.js",
     "build": "npm run lint && npm run test && webpack",
-    "watch": "webpack --watch",
-    "ci": "npm run test"
+    "watch": "npm run lint && npm run test && webpack --watch",
+    "ci": "npm run test && npm run coverage"
   },
   "eslintIgnore": ["*.test.js"],
   "author": "",
