--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_js:
     - '7'
     - 'stable'
 install:
-    - npm i
+    - npm i eslint jest
     - npm i -g coveralls
 script: npm run ci
 after_success:
