--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "Todo application using nothing but plain javascript.",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "npm run lint && jest",
     "coverage": "jest --coverage",
     "lint": "eslint src webpack.config.js",
-    "build": "npm run lint && npm run test && webpack",
-    "watch": "npm run lint && npm run test && webpack --watch",
+    "build": "npm run test && webpack",
+    "watch": "npm run test && webpack --watch",
     "ci": "npm run test && npm run coverage"
   },
   "eslintIgnore": ["*.test.js"],
