--- a/package.json
+++ b/package.json
@@ -1,27 +1,33 @@
 {
-  "name": "plain-todo",
-  "version": "1.0.0",
-  "description": "Todo application using nothing but plain javascript.",
+  "name": "jseasy",
+  "version": "0.1.0",
+  "description": "A small intuitive functional library crafted to solve most common JavaScript problems in pure functional style..",
   "main": "index.js",
   "scripts": {
     "test": "npm run lint && jest",
     "coverage": "jest --coverage",
     "lint": "eslint src webpack.config.js",
-    "build": "npm run test && webpack",
-    "watch": "npm run test && webpack --watch",
-    "ci": "npm run test && npm run coverage"
+    "build": "npm run test && npm run generate-doc && webpack",
+    "watch": "npm run test && npm run generate-doc && webpack --watch",
+    "ci": "npm run test && npm run coverage",
+    "generate-doc": "./node_modules/.bin/jsdoc -r -c jsdoc.json"
   },
-  "eslintIgnore": ["*.test.js"],
-  "author": "",
-  "license": "ISC",
+  "eslintIgnore": [
+    "*.test.js"
+  ],
+  "author": "Stefan Lazarevic",
+  "license": "MIT",
   "dependencies": {},
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
+    "docdash": "^0.4.0",
     "eslint": "^4.19.1",
     "eslint-watch": "^3.1.3",
     "jest": "^22.4.3",
+    "jsdoc": "^3.5.5",
+    "minami": "^1.2.3",
     "webpack": "^3.11.0"
   }
 }
